Bug 1830523 - Make IOInterposer RAII to avoid leaks r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D180924